package main.java.br.com.frameworkPpr.boardgame.padroes.comportamentais.command;

public interface Command {
    void execute();
    void undo();
}
